# rubberduck

./: .flake8  .gitignore  AGENT.md  LICENSE  README.md  instance_analysis.csv  langgraph.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_studio.sh
rubberduck/: setup.py
rubberduck/agents/: __init__.py  autonomous.py  executor.py  leader.py
rubberduck/config/: .env  __init__.py  claude-3-5-haiku-20241022.json  claude-3-7-sonnet-latest.json  claude-opus-4-20250514.json  claude-sonnet-4-0.json  claude-sonnet-4-20250514.json  default_leader.json  executor_gpt-4.1.json  gpt-4.1-2025-04-14.json  load_llm_config.py  o3-2025-04-16.json  o4-mini.json
rubberduck/models/: __init__.py  autonomous_config.py  executor.py  leader.py  semantic_search_config.py  swebench_workflow.py
rubberduck/prompts/: __init__.py  executor.md  executor_system_message.md  executor_task.md  leader.md  leader_description.md  leader_should_continue.md  leader_system_message.md  leader_task.md  load_markdown_message.py  log_extractor.md  semantic_processor.md  semantic_processor_rerank_task.md  setup_task.md
rubberduck/resources/: apply_patch.py  run_collect.sh
rubberduck/tools/: __init__.py  apply_patch.py  bash_exec.py  code_chunker.py  container_manager.py  docker_executor.py  embeddings_manager.py  execution_reply.py  (+1 more)
tests/: analyze_instances.py  conftest.py  migrate_db.py  semantic_search_test.py  swebench_data_collector.py  test_config.py  test_helpers.py  test_models.py  test_prompts.py  test_repo_context.py  test_sourcegraph_query.py  test_swebench_eval.py
(+166 files in other folders)
