[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubberduck"
version = "0.1.0"
description = "Autonomous AI software development assistant"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.black]
line-length = 120

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["F401", "F841"]
extend-select = ["I001"]
extend-fixable = ["I001"]
